fix: resolve test failures and apply code quality improvements across Quarkus modules
- Fix ParserConfigResolverTest to use correct maxStringSize default (4096 instead of 1024)
- Apply OpenRewrite Java 21 migration and formatting improvements:
  - Update Maven compiler plugin release configuration to Java 21
  - Standardize import ordering across all source files
  - Apply modern Java API migrations (sequenced collections)
- All pre-commit builds now pass successfully for all Quarkus modules:
  - cui-jwt-quarkus-deployment: ✅ (includes JavaScript testing and linting)
  - cui-jwt-quarkus: ✅ (runtime module with full test suite)
  - cui-jwt-quarkus-integration-tests: ✅ (Docker integration testing)
  - quarkus-integration-benchmark: ✅ (JMH benchmarking module)

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>